--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,9 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    title Welcome!
+    link(rel='stylesheet', href='')
   body
     block content
+    p This project is hosted on github at 
+      a(href="https://github.com/ansal/node-express-mongoose-boilerplate") https://github.com/ansal/node-express-mongoose-boilerplate.
